# weplay

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Console.cpp  Console.h  LICENSE  Main.cpp  README.md  Starship.cpp  Starship.h  State.h  Util.cpp  Util.h  build-linux.sh  build-osx.sh  build-rpi.sh  build-windows.bat  config.ini  config.toml  dietpi.sh  format.py  go.mod  go.sum  main.go  raspberry-console.vcxproj  raspberry-console.vcxproj.filters
console/: CMakeLists.txt  Config.hpp  Console.cpp  Console.hpp  Logging.cpp  Logging.hpp  Main.cpp  Starship.cpp  Starship.hpp  State.hpp  Util.cpp  Util.hpp  Windows.hpp  console.cpp  console.go  console.hpp  main.c  main.cpp  state.hpp  util.cpp  util.hpp
console/config/: config.go
console/controller/: Broadcaster.cpp  Broadcaster.hpp  Controller.cpp  Controller.hpp  Controllers.hpp  Implementation.cpp  Network.cpp  Network.hpp  Server.cpp  Server.hpp  TcpServer.cpp  TcpServer.hpp  TcpSession.cpp  TcpSession.hpp  controller.cpp  controller.go  controller.hpp
console/demo/: camera.go  column.go  demo.go  rand.go  ship.go
console/menu/: Menu.cpp  Menu.hpp  menu.cpp  menu.hpp
console/pong/: Ball.cpp  Ball.hpp  Context.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Player.cpp  Player.hpp  Pong.cpp  Pong.hpp  PowerUp.cpp  PowerUp.hpp  pong.go
console/spaceships/: camera.go  column.go  ship.go  spaceships.go  utils.go
console/starship/: Column.cpp  Column.hpp  Ship.cpp  Ship.hpp  ShipCamera.cpp  ShipCamera.hpp  Starship.cpp  Starship.hpp  column.cpp  column.hpp  ship.cpp  ship.hpp  ship_camera.cpp  ship_camera.hpp  starship.cpp  starship.hpp
console/tetris/: Action.hpp  Bag.cpp  Bag.hpp  Context.hpp  DrawBlock.cpp  DrawBlock.hpp  Input.cpp  Input.hpp  Matrix.cpp  Matrix.hpp  Piece.cpp  Piece.hpp  Player.cpp  Player.hpp  Score.cpp  Score.hpp  Shape.cpp  Shape.hpp  Tetris.cpp  Tetris.hpp  tetris.cpp  tetris.hpp
console/utils/: utils.go
controller/: controller.ino  platformio.ini
controller/include/: Buttons.hpp  Connection.hpp  Mpu.hpp  Print.hpp  button.h  button.hpp  connection.h  connection.hpp
controller/src/: Buttons.cpp  Connection.cpp  Main.cpp  Print.cpp  button.cpp  connection.cpp  main.cpp
libraries/: inih.h
resources/: wave.frag
resources/pong/: light_and_shadow.frag
src/: CMakeLists.txt  main.cc  main.cpp  raylib.h
vs2019/: raspberry-console.sln  raspberry-console.vcxproj  raspberry-console.vcxproj.filters
